<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".userInterface.DetailTVShowActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backdropTV"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginBottom="256dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progBackdrop"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="152dp"
            android:layout_marginBottom="572dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="750dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetailTV"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/transparent"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/posterDetailTV"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginEnd="228dp"
            android:layout_marginBottom="420dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/titleDetailTV"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="276dp"
            android:maxLines="3"
            android:text="@string/textTitle"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backdropTV"
            app:layout_constraintStart_toEndOf="@+id/posterDetailTV" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textRelease"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/posterDetailTV"
            app:layout_constraintTop_toBottomOf="@+id/titleDetailTV" />

        <TextView
            android:id="@+id/dateDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/textDate"
            android:textColor="@color/gold"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/titleDetailTV" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/textSeason"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/posterDetailTV"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/line"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/seasonDetailTV"
            app:layout_constraintTop_toBottomOf="@+id/dateDetailTV" />

        <ProgressBar
            android:id="@+id/progSeason"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/dateDetailTV" />

        <TextView
            android:id="@+id/seasonDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:text="@string/notAvailable"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/dateDetailTV" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/textEpisodes"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/dateDetailTV" />

        <ProgressBar
            android:id="@+id/progEpisode"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/dateDetailTV" />

        <TextView
            android:id="@+id/episodeDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:text="@string/notAvailable"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/dateDetailTV" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/posterDetailTV"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/star_rating" />

        <TextView
            android:id="@+id/ratingDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:text="@string/notAvailable"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/episodeDetailTV" />

        <ProgressBar
            android:id="@+id/progRating"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/textSynopsis"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/posterDetailTV" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/synopsisDetailTV"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/notAvailable"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ProgressBar
            android:id="@+id/progSynopsis"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>