<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentItemMovie"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:elevation="200dp"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:id="@+id/holderPosterM"
        app:cardCornerRadius="4dp"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

        <ImageView
            android:id="@+id/posterM"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="86dp"
        android:layout_toEndOf="@+id/holderPosterM"
        android:text="@string/textTitle"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


        <TextView
            android:id="@+id/dateM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="65dp"
            android:layout_toEndOf="@+id/holderPosterM"
            android:text="@string/textDate"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="23dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="21dp"
            android:layout_toEndOf="@+id/holderPosterM"
            app:srcCompat="@drawable/star_rating" />

        <TextView
            android:id="@+id/ratingM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="22dp"
            android:layout_toEndOf="@+id/holderPosterM"
            android:text="@string/textRating"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="231dp"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@+id/holderPosterM"
            app:srcCompat="@drawable/next" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>